fixed some alignment issues

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -22,3 +22,8 @@
 {
     margin: auto !important;
 }
+
+.MuiGrid-container
+{
+    align-items: center;
+}
